Fix bottom cut off on mobile browser

--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,7 @@ body, html {
   position: relative;
   width: 100vw;
   height: 100vh;
+  height: 100dvh;
   display: flex;
   align-items: center;
   justify-content: center;
